atualizacao do senaiflix

--- a/home/index.html
+++ b/home/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="cabecalho">
         <a href="index.html"> SENAIFLIX</a>
-        <img id="menu-btn" class="hamburger-menu" src="../assets/icons/material-symbols_menu(1).png" alt="">
+        <img id="menu-btn" class="hamburger-menu" src="../assets/icons/icons/material-symbols_menu (1).png" alt="">
         <nav>
 
             <a href="#">Inicio</a>
@@ -64,11 +64,44 @@
                     <option value="Misterio">Misterio</option>
                     <option value="Sci-Fi & Fantasy">Sci-Fi & Fantasy</option>
                 </select>
+                <button id="limpar-filtro" class="limpar-filtros">Limpar Filtro</button>
 
             </div>
         </div>
+    </section>
+    <section class="Filmes-Series">
+     <h2 class="titulo-filmes">Filmes</h2>
+     <div id="filmes-container" class="card-container">
+      <a href="../detalhes-do-filme/index.html" class="card"></a>
+      <a href="../detalhes-do-filme/index.html" class="card"></a>
+      <a href="../detalhes-do-filme/index.html" class="card"></a>
+      <a href="../detalhes-do-filme/index.html" class="card"></a>
+      <a href="../detalhes-do-filme/index.html" class="card"></a>
+      <a href="../detalhes-do-filme/index.html" class="card"></a>
+     </div>
+    <section class="Filmes-Series">
+     <h2 class="titulo-series">Series</h2>
+     <div id="series-container" class="card-container">
+      <a href="../detalhes-do-serie/index.html" class="card"></a>
+      <a href="../detalhes-do-serie/index.html" class="card"></a>
+      <a href="../detalhes-do-serie/index.html" class="card"></a>
+      <a href="../detalhes-do-serie/index.html" class="card"></a>
+      <a href="../detalhes-do-serie/index.html" class="card"></a>
+      <a href="../detalhes-do-serie/index.html" class="card"></a>
+     </div>
+     </section>
     </main>
+    <footer>
+        <p>Nos sigam nas redes sociais</p>
+        <div class="imgs">
+            <img src="../assets/imgs/imgs/mdi_twitter.svg" alt="">
+            <img src="../assets/imgs/imgs/mdi_youtube.svg" alt="">
+            <img src="../assets/imgs/imgs/ri_instagram-fill.svg" alt="">
+
+        </div>
+    </footer>
 
 </body>
+<script src="../scripts/script.js"></script>
 
 </html>
